--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-helmet": "^6.1.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router": "^6.16.0",
-    "react-router-dom": "^6.16.0"
+    "react-router-dom": "^6.16.0",
+    "react-toastify": "^10.0.4"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
